# credit_risk_model

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
models/: CatB_tfm_1.pkl  CatB_tfm_2.pkl  LDA_tfm_1.pkl  LR_network1.hdf5  LR_tfm_network1.hdf5  MLP_tfm_1.pkl
src/: main.py
src/commons/: constants.py
src/feature_engineering/: 00.create_dataframe.py  01.clean_data.py  _graph.py  clean_data.py  constants.py  main.py  new_features.py  utils.py
src/work_model/: 02.credit_scoring.py  catboost.py  dic_models.py  lda.py  logistic_regresion.py  lr_network.py  mlp.py  random_forest.py  resnet.py  svm.py
